Fixed broken author links due to z-index issue Closes https://github.com/TryGhost/Casper/issues/333

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -135,7 +135,7 @@ body {
 
 .site-header-content {
     position: relative;
-    z-index: 100;
+    z-index: 300;
     display: flex;
     flex-direction: column;
     justify-content: center;
